# obj-loading

./: CMakeLists.txt  README!.txt  README.md  README.txt  igme_config.yml
MultipleOBJs/: CameraManager.cpp  CameraManager.h  InputManager.cpp  MultipleOBJs.sln  MultipleOBJs.vcxproj  MultipleOBJs.vcxproj.filters  RenderObject.h  ResourceManager.cpp  ResourceManager.h  main.cpp
assets/: fshader.glsl
src/: main.cpp
src/include/: LightingManager.h
src/source/: CameraManager.cpp  LightingManager.cpp  RenderObject.cpp  ResourceManager.cpp
